# DataTypes

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
tests/: CMakeLists.txt  check_array.c
tests/check-0.15.2/: DartConfiguration.tcl  check_stdint.h  config.status  libtool
tests/check-0.15.2/doc/: check_money.1-2.c.diff  check_money.2-3.c.diff  check_money.3-6.c.diff  check_money.6-7.c.diff  money.1-2.h.diff  money.1-3.c.diff  money.3-4.c.diff  money.4-5.c.diff  money.5-6.c.diff
tests/check-0.15.2/lib/.deps/: fpclassify.Plo  libcompat.Plo
tests/check-0.15.2/src/: check.h
tests/check-0.15.2/src/.deps/: check.Plo  check_error.Plo  check_list.Plo  check_log.Plo  check_msg.Plo  check_pack.Plo  check_print.Plo  check_run.Plo  check_str.Plo
tests/check-0.15.2/src/.libs/: libcheck.lai
tests/check-0.15.2/tests/: check_check  check_check_export  check_mem_leaks  check_nofork  check_nofork_teardown  check_set_max_msg_size  check_stress  check_thread_stress  ex_output  test.xml
tests/check-0.15.2/tests/.deps/: check_check-check_check_exit.Po  check_check-check_check_fixture.Po  check_check-check_check_fork.Po  check_check-check_check_limit.Po  check_check-check_check_log.Po  check_check-check_check_log_internal.Po  check_check-check_check_main.Po  check_check-check_check_master.Po  check_check-check_check_msg.Po  check_check-check_check_pack.Po  check_check-check_check_selective.Po  check_check-check_check_sub.Po  check_check-check_check_tags.Po  check_check-check_list.Po  check_check_export-check_check_export_main.Po  check_check_export-check_check_fork.Po  check_check_export-check_check_log.Po  check_check_export-check_check_master.Po  check_check_export-check_check_sub.Po  check_check_export-check_check_tags.Po  check_nofork.Po  ex_output.Po  (+12 more)
(+14 files in other folders)
